# Calculator

./: CMakeLists.txt
CalculatorCMAKE/: CMakeLists.txt  Calculator.cpp  Calculator.h  Converter.cpp  Converter.h  Loader.h  Parser.cpp  Parser.h  Token.h  main.cpp
CalculatorCMAKE/plugins/: CMakeLists.txt  cosinus.cpp  cosinus.h  power.cpp  power.h  sinus.cpp  sinus.h
